--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@number-flow/react": "^0.5.11",
     "@react-three/fiber": "^9.5.0",
+    "motion": "^12.29.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.180.0"
@@ -19,6 +21,6 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.0",
     "typescript": "^5.5.0",
-    "vite": "^5.4.0"
+    "vite": "^7.3.1"
   }
 }
