Add radical color effects and ASCII renderer modal
- Install @react-three/drei dependency
- Update radial slider filter effects to be more radical:
  * Hue rotation (0-360deg based on slider)
  * Increased saturation (1-4x)
  * Brightness boost (1-1.8x)
  * Enhanced contrast (1-2.5x)
  * Invert colors effect at high values (70%+)
- Create ASCII modal component with animated overlay
- Integrate ASCII renderer from ascii-renderer folder
- Update Explore More button to open ASCII modal
- Add modal styling with backdrop blur and animations
- Modal includes 3D rotating torus knot with ASCII effect

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@number-flow/react": "^0.5.11",
+    "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "motion": "^12.29.2",
     "react": "^19.0.0",
